src/index.css
:root {
  --dark-heavy: #473335;
  --dark-medium: #7f4d3e;
  --error-strong: #b0413e;
  --error-warn: #fcaa67;
  --myoffwhite: #fffef2;
  --myoffblack: #010101;
  --owdarker: hsl(27, 100%, 96%);
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}
#root {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
body {
  background-color: rgb(255, 251, 242);
  color: black;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

.top-bar {
  display: flex;
  align-items: center;
  height: 48px;
  color: white;
}

.top-bar > header {
  background-color: rgb(165, 0, 0);
  position: fixed;
  max-height: 48px;
  display: flex;
  align-items: center;
  height: 100%;
  display: flex;
  align-items: center;
  width: 100%;
}
.top-bar > header > p {
  font-size: 20px;
}

main {
  flex: 1;
  justify-self: center;
  margin-top: 40px;
}

main > h2 {
  justify-self: center;
  font-size: 64px;
}

.article {
  display: flex;
  margin-bottom: 8px;
  border: 1px solid black;
  padding: 0px 0px;
  padding-right: 8px;
}

.specific-article-item {
  justify-self: center;
  border: 1px solid black;
  margin: 8px;
  padding: 8px;
  border-radius: 5px;
  max-width: 90%;
}

.specific-article-item > h2 {
  font-size: 3rem;
  justify-self: center;
}
.specific-article-item > .article-image {
  display: block;
  margin: auto;
  max-width: 30%;
  max-height: 300px;
  aspect-ratio: auto;
  object-fit: cover;
}
.article-body {
  display: flex;
  border: 1px solid black;
}

.comments-section {
  justify-self: center;
  border: 1px solid black;
  margin: 8px;
  padding: 8px;
  border-radius: 5px;
  max-width: 90%;
}

.comment {
  display: flex;
  margin: 8px 0px;
  border: 1px solid black;
}
.comment-body > * {
  overflow-wrap: break-word;
  word-break: break-word;
  white-space: pre-wrap;
}
.comment-count {
  justify-self: center;
}

.user-profile {
  justify-self: center;
  text-align: center;
  border: 1px solid black;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.user-profile > h3 {
  justify-self: end;
}
.vote-block {
  background-color: darkgray;
  display: flex;
  flex-direction: column;
  padding: 0px;
  margin: 0px;
  min-width: 50px;
  align-content: center;
  justify-content: center;
}

.vote-block > * {
  max-width: 50px;
  padding: 0px;
  margin: 0px 0px;
  text-align: center;
}
.vote-block > button {
  height: 100%;
  width: 100%;
  border: 0px;
  background-color: transparent;
  font-size: 36px;
}
.all-articles-image {
  height: 130px;
  margin-right: 1rem;
  border: 3px solid black;
  object-fit: cover;
  aspect-ratio: 1.5 / 1;
}
.username {
  font-weight: bold;
}

.comment-body {
  margin-left: 0.5rem;
}

.upvoted {
  text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 20px #00ff00;
  color: darkgreen;
}

.downvoted {
  text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 20px #ff0000;
}

#create-article {
  display: flex;
  margin: 8px 0px;
  border: 1px solid black;
  padding: 8px;
  flex-direction: column;
}

#create-article > form {
  display: flex;
  flex-direction: column;
}

.new-comment {
  box-shadow: 0 0 10px 1px #00cf23;
}

.delete-comment {
  margin-left: 8px;
  font-weight: bold;
}

.comment.comment-deleting {
  opacity: 0.5;
  pointer-events: none;
  position: relative;
}

.deleting-text {
  margin-left: 10px;
  font-size: 0.9rem;
  font-style: italic;
  color: #b00;
}

.sort-block > h3 {
  padding: 0px;
  margin: 0px;
}
.sort-block > select {
  margin: 5px 4px;
}
.sort-block {
  margin-bottom: 2px;
}

.user-avatar {
  height: 300px;
  aspect-ratio: auto;
}

.logo-link {
  border-right: 1px solid rgb(150, 0, 0);
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 12px;
}
.logo-link:hover {
  background-color: rgb(150, 0, 0);
}

#logo {
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
}

a:has(> #logo) {
  text-shadow: 1px 1px black;
  text-decoration: none;
  color: inherit;
}

.user-wrapper {
  display: flex;
}
.user-wrapper > * {
  margin-left: 8px;
  padding: 8px;
  justify-self: end;
}

textarea {
  width: 100%;
  max-width: 1000px;
  max-height: 300px;
}

.nav-link {
  border-right: 1px solid rgb(150, 0, 0);
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 12px;
  color: white;
  text-decoration: none;
  font-weight: bold;
}
.nav-link:hover {
  background-color: rgb(150, 0, 0);
}

.nav-user {
  justify-self: right;
  color: #ead196;
  font-size: 20px;
}
.logout-link {
  margin-left: auto;
}

#topic-text {
  font-size: 28px;
}

#topic-name {
  text-shadow: 1px 0px rgb(255, 0, 0);
}

.article-poster {
  font-weight: bold;
  border-bottom: 1px solid darkred;
  color: darkred;
}

.article-key {
  font-weight: bolder;
}

.vote-count {
  font-size: 30px;
  font-weight: bold;
}

.negative-vote-count {
  color: darkred;
}

.page-nav {
  display: flex;
  flex-direction: row;
  align-items: center;
}

#next-page {
  margin-left: auto;
}

#prev-page {
  margin-right: auto;
}

#footer {
  margin-top: auto;
  font-size: 12px;
  text-align: center;
}

.specific-article-item.deleting {
  opacity: 0.5;
  pointer-events: none;
  position: relative;
}
.specific-article-item.deleting {
  opacity: 0.5;
  pointer-events: none;
  position: relative;
}

.error {
  color: var(--error-strong);
}

.article.deleting {
  opacity: 0.5;
  pointer-events: none;
  position: relative;
}

.article-fields {
  position: relative;
  width: 100%;
}

.article-fields button {
  position: absolute;
  bottom: 0;
  right: 0;
  margin-bottom: 5px;
}

